--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,10 @@
 
 @layer components{
     .bannerIcon{
-        @apply w-16 h-16 bg-black bg-opacity-25 text-gray-200 text-xl inline-flex items-center justify-center shadow-shadowOne rounded-md hover:bg-opacity-40 hover:-translate-y-1 transition-all cursor-pointer duration-300;
+        @apply w-10 md:w-16 h-10 md:h-16 bg-black bg-opacity-25 text-gray-200 text-xl inline-flex items-center justify-center shadow-shadowOne rounded-md hover:bg-opacity-40 hover:-translate-y-1 transition-all cursor-pointer duration-300;
     }
     .resumeLi {
-    @apply w-full h-20 bg-black bg-opacity-25 text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
+    @apply w-full md:h-20 bg-black bg-opacity-25 text-sm md:text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
          }
 .bgOpacity {
 @apply bg-black bg-opacity-40;
