--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@
 
 .app__bg {
     background: url('../public/images/bg.png');
+    background-image: url("../public/images/bg.png") repeat;
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
