--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,8 +22,8 @@
 }
 
 .app__bg {
-    background: url('../public/images/bg.png');
-    background-image: url("../public/images/bg.png") repeat;
+    background: url('../assets/bg.png');
+    background-image: url('../assets/bg.png') repeat;
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
