--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,8 +29,10 @@
     }
 }
 
+/* #161515 */
+
 .app__bg {
-    background-color: #161515 !important;
+    background-color: black !important;
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
